manifests/apps/ucdialplans/overlays/home/deploy-patch.yaml
# overlays/home/apps/ucdialplans/deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucdialplans
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - ucdialplans
            topologyKey: kubernetes.io/hostname
        volumeMounts:
        - name: nfs-ucdialplans
          mountPath: /var/www/rulesets
      volumes:
      - name: nfs-ucdialplans
        persistentVolumeClaim:
          claimName: nfs-ucdialplans
