manifests/apps/ucdialplans/overlays/home/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ucdialplans
  namespace: ucdialplans
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "www.ucdialplans.com"
  rules:
  - backendRefs:
    - name: ucdialplans-service
      namespace: ucdialplans
      kind: Service
      port: 8080
